[gd_scene load_steps=11 format=3 uid="uid://cdfpkcvyx66sx"]

[ext_resource type="Texture2D" uid="uid://dib45hhu31nt" path="res://Assets/Art/PlaceHolders/ControlsBg.png" id="1_4tvo1"]
[ext_resource type="Texture2D" uid="uid://bewl45qdirp8w" path="res://Assets/Art/Menu/OptionsOff.png" id="3_fxfs8"]
[ext_resource type="Script" uid="uid://bq1smq7025jr3" path="res://Assets/Scripts/Menu Scripts/PauseNode.gd" id="4_fx1m6"]
[ext_resource type="Texture2D" uid="uid://crcon2xwm5xj6" path="res://Assets/Art/Menu/OptionsOn.png" id="4_sqgqt"]
[ext_resource type="PackedScene" uid="uid://bli4fnfa7mnar" path="res://Scenes/Options/OptionsScene.tscn" id="5_fxfs8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twjg6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayg5y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffkdq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2c132"]

[sub_resource type="Theme" id="Theme_xpkpk"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_twjg6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_ayg5y")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_ffkdq")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_2c132")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("4_fx1m6")

[node name="Background2" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -172.5
offset_right = 184.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.619608)

[node name="Background" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -165.5
offset_right = 177.5
offset_bottom = 165.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0, 0.00784314, 0.713726)

[node name="ControlsMenu" type="CanvasLayer" parent="."]

[node name="ControlsTitle" type="Label" parent="ControlsMenu"]
process_mode = 2
visible = false
offset_left = 1.0
offset_top = 21.0
offset_right = 641.0
offset_bottom = 62.0
theme_type_variation = &"HeaderLarge"
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsContainer" type="ScrollContainer" parent="ControlsMenu"]
process_mode = 2
visible = false
offset_left = 182.0
offset_top = 82.0
offset_right = 462.0
offset_bottom = 280.0
theme = SubResource("Theme_xpkpk")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenu/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot1" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot1"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move up"

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot1"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "W"
horizontal_alignment = 1

[node name="Slot2" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot2"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move down"

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot2"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "S"
horizontal_alignment = 1

[node name="Slot3" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot3"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move left       "

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot3"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "A"
horizontal_alignment = 1

[node name="Slot4" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot4"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move right"

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot4"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "D"
horizontal_alignment = 1

[node name="Slot5" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot5"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability 1"

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot5"]
layout_mode = 0
offset_left = 215.0
offset_top = 6.0
offset_right = 275.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "LMB"
horizontal_alignment = 1

[node name="Slot6" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot6"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability 2"

[node name="Slot7" type="TextureRect" parent="ControlsMenu/ControlsContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_4tvo1")
expand_mode = 5

[node name="Label" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot7"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pause"

[node name="Label2" type="Label" parent="ControlsMenu/ControlsContainer/VBoxContainer/Slot7"]
layout_mode = 0
offset_left = 225.0
offset_top = 6.0
offset_right = 274.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ESC"
horizontal_alignment = 1

[node name="Title" type="Label" parent="."]
process_mode = 2
offset_left = 1.0
offset_top = 21.0
offset_right = 641.0
offset_bottom = 62.0
theme_type_variation = &"HeaderLarge"
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
process_mode = 2
offset_left = 241.0
offset_top = 91.0
offset_right = 403.0
offset_bottom = 122.0
focus_neighbor_bottom = NodePath("../ControlsButton")
text = "Resume"

[node name="ControlsButton" type="Button" parent="."]
process_mode = 2
offset_left = 241.0
offset_top = 148.0
offset_right = 403.0
offset_bottom = 179.0
focus_neighbor_top = NodePath("../ResumeButton")
text = "Controls"

[node name="OptionsButton" type="TextureButton" parent="."]
process_mode = 2
offset_left = 270.0
offset_top = 201.0
offset_right = 376.0
offset_bottom = 243.0
focus_neighbor_top = NodePath("../ResumeButton")
texture_normal = ExtResource("3_fxfs8")
texture_pressed = ExtResource("4_sqgqt")

[node name="MenuButton" type="Button" parent="."]
process_mode = 3
offset_left = 242.0
offset_top = 263.0
offset_right = 404.0
offset_bottom = 294.0
text = "Main menu"

[node name="BackButton" type="Button" parent="."]
process_mode = 3
offset_left = 242.0
offset_top = 292.0
offset_right = 404.0
offset_bottom = 323.0
text = "Back"

[node name="PauseNode" type="Node" parent="."]
process_mode = 2

[node name="OptionsScene" parent="." instance=ExtResource("5_fxfs8")]
visible = false

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
