[gd_scene load_steps=25 format=3 uid="uid://kmijtn114svf"]

[ext_resource type="Script" uid="uid://h0xxtjfgocwf" path="res://Assets/Scripts/Misc/prototype_world.gd" id="1_3kogm"]
[ext_resource type="Script" uid="uid://db7rhu7tjug88" path="res://Assets/Scripts/Player Scripts/PlayerUIHandler.gd" id="1_gnsay"]
[ext_resource type="Texture2D" uid="uid://o3t2gdsrqcux" path="res://Assets/Art/BarTemp.png" id="2_ydcph"]
[ext_resource type="Texture2D" uid="uid://dydgl2851ea6v" path="res://Assets/Art/grid.jpg" id="3_kfju6"]
[ext_resource type="Script" uid="uid://cvs7x0y7n8u5s" path="res://Assets/Scripts/Universal Scripts/background.gd" id="4_aly1e"]
[ext_resource type="Texture2D" uid="uid://dmyuiq7n3wok0" path="res://Assets/Art/XPCircle.png" id="4_d0q0w"]
[ext_resource type="Texture2D" uid="uid://bs0bfjn56fwlt" path="res://Assets/Art/Player.png" id="4_qruto"]
[ext_resource type="PackedScene" uid="uid://ccv3fxn55gofe" path="res://Scenes/Misc/enemy.tscn" id="5_aly1e"]
[ext_resource type="Script" uid="uid://dh8o41wpv6qq2" path="res://Assets/Scripts/Player Scripts/player.gd" id="5_w5l6p"]
[ext_resource type="PackedScene" uid="uid://btmobglafrxdx" path="res://Scenes/Misc/enemy_2.tscn" id="6_w5l6p"]
[ext_resource type="PackedScene" uid="uid://hugp881sope0" path="res://Scenes/Misc/enemy_3.tscn" id="7_wlc0k"]
[ext_resource type="PackedScene" uid="uid://djdmgiabwutdt" path="res://Scenes/Misc/enemy_4.tscn" id="8_1cxn6"]
[ext_resource type="AudioStream" uid="uid://c0vahobgr2g8" path="res://Assets/A desperate battle, no way back_ (Track 04).mp3" id="12_wlc0k"]
[ext_resource type="Script" uid="uid://bq1smq7025jr3" path="res://Assets/Scripts/Menu Scripts/PauseNode.gd" id="13_1cxn6"]
[ext_resource type="Texture2D" uid="uid://cx2v6y6jjrgq2" path="res://Assets/Art/SuspiciousStew.png" id="15_3kogm"]
[ext_resource type="Texture2D" uid="uid://dib45hhu31nt" path="res://Assets/Art/ControlsBg.png" id="15_twjg6"]
[ext_resource type="AudioStream" uid="uid://yra0veoy0d5n" path="res://Assets/MenuMusic.mp3" id="16_keglp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0q0w"]
size = Vector2(8.7, 8.7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kogm"]
size = Vector2(10, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twjg6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayg5y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffkdq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2c132"]

[sub_resource type="Theme" id="Theme_dthbc"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_twjg6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_ayg5y")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_ffkdq")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_2c132")

[node name="World" type="Node2D"]
script = ExtResource("1_3kogm")

[node name="PlayerUI" type="CanvasLayer" parent="."]
script = ExtResource("1_gnsay")

[node name="UIContainer" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="PlayerUI/UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.1
anchor_right = 1.1
offset_left = 15.0
offset_top = 10.0
offset_right = 215.0
offset_bottom = 60.0
value = 100.0
texture_under = ExtResource("2_ydcph")
texture_progress = ExtResource("2_ydcph")
tint_progress = Color(0.690002, 0.0584759, 9.62615e-08, 1)
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="PlayerUI/UIContainer"]
layout_mode = 0
offset_left = 9.0
offset_top = 47.0
offset_right = 67.0
offset_bottom = 70.0
text = "Level: 1"

[node name="ClassLabel" type="Label" parent="PlayerUI/UIContainer"]
layout_mode = 0
offset_left = 9.0
offset_top = 65.0
offset_right = 173.0
offset_bottom = 88.0
text = "Class: Technomancer"

[node name="TextureProgressBar" type="TextureProgressBar" parent="PlayerUI/UIContainer"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 263.0
offset_bottom = 260.0
fill_mode = 4
texture_under = ExtResource("4_d0q0w")
texture_progress = ExtResource("4_d0q0w")
tint_under = Color(0.481789, 0.481789, 0.481789, 1)
tint_progress = Color(0.331582, 0.534591, 0.947811, 1)

[node name="Sprite2D" type="Sprite2D" parent="PlayerUI/UIContainer"]
position = Vector2(32, 27)
scale = Vector2(0.107353, 0.108088)
texture = ExtResource("15_3kogm")

[node name="BackGround" type="Sprite2D" parent="."]
modulate = Color(0.32, 0.32, 0.32, 1)
position = Vector2(581, 367)
texture = ExtResource("3_kfju6")
script = ExtResource("4_aly1e")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(328, 182)
script = ExtResource("5_w5l6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_d0q0w")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.8, 1, 1, 1)
scale = Vector2(0.55, 0.55)
texture = ExtResource("4_qruto")

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("RectangleShape2D_3kogm")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="Enemy" parent="." instance=ExtResource("5_aly1e")]
position = Vector2(49, 51)

[node name="Enemy2" parent="." instance=ExtResource("6_w5l6p")]
position = Vector2(599, 52)

[node name="Enemy3" parent="." instance=ExtResource("7_wlc0k")]
position = Vector2(324, 349)

[node name="Enemy4" parent="." instance=ExtResource("8_1cxn6")]
position = Vector2(326, 14)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_wlc0k")
volume_db = -10.0
autoplay = true

[node name="PausedLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="PausedLayer"]
process_mode = 2
offset_left = 1.0
offset_top = 21.0
offset_right = 641.0
offset_bottom = 62.0
theme_type_variation = &"HeaderLarge"
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PausedLayer"]
process_mode = 2
offset_left = 241.0
offset_top = 120.0
offset_right = 403.0
offset_bottom = 151.0
text = "Resume"

[node name="ControlsButton" type="Button" parent="PausedLayer"]
process_mode = 2
offset_left = 241.0
offset_top = 180.0
offset_right = 403.0
offset_bottom = 211.0
text = "Controls"

[node name="QuitButton" type="Button" parent="PausedLayer"]
process_mode = 2
offset_left = 241.0
offset_top = 239.0
offset_right = 403.0
offset_bottom = 270.0
text = "Quit"

[node name="ScrollContainer" type="ScrollContainer" parent="PausedLayer"]
process_mode = 2
visible = false
offset_left = 182.0
offset_top = 82.0
offset_right = 462.0
offset_bottom = 280.0
theme = SubResource("Theme_dthbc")

[node name="VBoxContainer" type="VBoxContainer" parent="PausedLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot1" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot1"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move up"

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot1"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "W"
horizontal_alignment = 1

[node name="Slot2" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot2"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move down"

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot2"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "S"
horizontal_alignment = 1

[node name="Slot3" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot3"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move left       "

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot3"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "A"
horizontal_alignment = 1

[node name="Slot4" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot4"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " Move right"

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot4"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "D"
horizontal_alignment = 1

[node name="Slot5" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot5"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability 1"

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot5"]
layout_mode = 0
offset_left = 215.0
offset_top = 6.0
offset_right = 275.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "LMB"
horizontal_alignment = 1

[node name="Slot6" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot6"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability 2"

[node name="Slot7" type="TextureRect" parent="PausedLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_twjg6")
expand_mode = 5

[node name="Label" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot7"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 125.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pause"

[node name="Label2" type="Label" parent="PausedLayer/ScrollContainer/VBoxContainer/Slot7"]
layout_mode = 0
offset_left = 225.0
offset_top = 6.0
offset_right = 274.0
offset_bottom = 45.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ESC"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="PausedLayer"]
process_mode = 2
visible = false
offset_left = 242.0
offset_top = 291.0
offset_right = 404.0
offset_bottom = 322.0
text = "Back"

[node name="Title2" type="Label" parent="PausedLayer"]
process_mode = 2
visible = false
offset_left = 1.0
offset_top = 21.0
offset_right = 641.0
offset_bottom = 62.0
theme_type_variation = &"HeaderLarge"
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseNode" type="Node" parent="."]
process_mode = 2
script = ExtResource("13_1cxn6")

[node name="Music" type="AudioStreamPlayer2D" parent="PauseNode"]
stream = ExtResource("16_keglp")
autoplay = true

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Player/Area2D" to="Player" method="_on_area_2d_body_exited"]
[connection signal="pressed" from="PausedLayer/ResumeButton" to="PauseNode" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausedLayer/ControlsButton" to="PauseNode" method="_on_controls_button_pressed"]
[connection signal="pressed" from="PausedLayer/QuitButton" to="PauseNode" method="_on_quit_button_pressed"]
[connection signal="pressed" from="PausedLayer/BackButton" to="PauseNode" method="_on_back_button_pressed"]
